# track_your_geo

./: .env.example  .gitignore  AGENTS.md  README.md  product_brief.md  pyproject.toml
apps/api/: nixpacks.toml  railway.json  requirements.txt
apps/api/docs/: geo-scoring-formula.md
apps/api/tygeo/: __init__.py  analysis.py  citations.py  config.py  db.py  hardcoded_pilots.py  llm.py  main.py  models.py  pilots.py  schemas.py
apps/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json
apps/web/src/: App.css  App.tsx  RecommendationsList.tsx  ScoreBreakdown.tsx  TrendChart.tsx  index.css
docs/: geo-scoring-realism.md
docs/worklog/: 2026-05-12.md  2026-05-17.md  2026-06-27.md  2026-06-28.md  README.md
eval/: smoke_execute_run.py  smoke_multi_llm.py  test_analysis.py  test_api_runs.py  test_citations.py  test_deepeval_contains.py  test_extraction.py  test_llm_cost.py  test_multi_llm.py  test_pilots.py  test_recommendations.py
openspec/changes/add-citation-domains/: design.md  proposal.md  tasks.md
openspec/changes/dashboard-history-view/: design.md  proposal.md  tasks.md
openspec/changes/deploy-railway-vercel/: tasks.md
openspec/changes/multi-brand-yaml/: design.md  proposal.md  tasks.md
openspec/changes/multi-llm-citations/: design.md  tasks.md
openspec/changes/recommendations-engine-v1/: proposal.md  tasks.md
openspec/changes/structured-extraction/: design.md  tasks.md
openspec/specs/geo-probe/: spec.md
pilots/demo/: clio-uk.yaml  sdl-surveying-uk.yaml
scripts/: dev.ps1
(+17 files in other folders)
