[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "track-your-geo"
version = "0.1.0"
description = "Track Your GEO — prototype API and evaluation tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "sqlalchemy>=2.0.36,<2.1",
    "litellm>=1.55.0,<2",
    "pyyaml>=6.0.2,<7",
    "pydantic-settings>=2.6.0,<3",
    "httpx>=0.27.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24.0,<2",
    "ruff==0.8.6",
]
eval = [
    "deepeval>=2.0,<4",
]

[project.scripts]
tygeo-api = "tygeo.main:run_server"

[tool.setuptools.packages.find]
where = ["apps/api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["eval"]
pythonpath = ["apps/api"]
